# SMV2rho

./: .gitignore  CITATION.cff  LICENSE  README.md  coincident_profile_functions.py  environment.yml  pyproject.toml  readthedocs.yaml  uncertainties.py
CALIBRATION_DATA/: references.bib  references.md  vp_vs_rho_p_all_lab_data.csv
SMV2rho/: density_functions.py  plotting.py  spatial_functions.py  temperature_dependence.py  uncertainties.py
TUTORIALS/: V_to_rho_all.py  density_convsersion_documentation.ipynb  tutorial_1.ipynb  tutorial_2.ipynb  tutorial_3.ipynb  tutorial_4.ipynb  tutorial_5.ipynb  tutorial_6.ipynb  tutorial_7.ipynb  tutorial_master.ipynb
TUTORIALS/.ipynb_checkpoints/: tutorial_1-checkpoint.ipynb  tutorial_2-checkpoint.ipynb  tutorial_3-checkpoint.ipynb  tutorial_4-checkpoint.ipynb  tutorial_5-checkpoint.ipynb  tutorial_6-checkpoint.ipynb  tutorial_master-checkpoint.ipynb
docs/: SMV2rho.coincident_profile_functions.rst  SMV2rho.density_functions.rst  SMV2rho.plotting.rst  SMV2rho.spatial_functions.rst  SMV2rho.temperature_dependence.rst  SMV2rho.uncertainties.rst  TUTORIALS  conf.py  index.rst  requirements.txt
docs/source/: coincident_profile_functions.rst  conf.py  contributing.rst  density_functions.rst  index.rst  installation.rst  license.rst  model_calibration.rst  modules.rst  spatial_functions.rst  temperature_dependence.rst  tutorials.rst  uncertainties.rst  usage.rst
src/SMV2rho/: coincident_profile_functions.py  constants.py  density_functions.py  plotting.py  (+4 more)
src/SMV2rho.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+36 files in other folders)
