[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SMV2rho"
version = "0.1.0"
authors = [
  { name="Simon Stephenson" },
]
description = "Calculate density as a function of crustal seismic velocity."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  'numpy',
  'matplotlib',
  'pandas',
  'scipy',
  'cartopy'
]
